OpenTK 0.3.6 -> 0.3.7

+ OpenTK.Build
	+ Added new, (more) cross-platform build system, written on C#. This takes the place of the scripts and batch files used to compile OpenTK up till now.
	+ Removed all build scripts.

+ OpenTK.Framework
	+ Now builds under Linux.


OpenTK 0.3.5 -> 0.3.6

+ OpenTK.OpenGL.Bind
	+ Synced with Tao.GlBindGen codebase.
	+ Uses CodeDOM internally for code generation.
	+ Updated to latest specs (which include shader model 4).

+ OpenTK.OpenGL (Low level)
	+ All OpenGL extensions are now generated (up to shader model 4).
	+ Decorated imports and delegates with the SuppressUnmanagedCodeSecurity attribute. Major speed improvements in CPU-bound applications.
	+ More robust and faster static initialisation for the GL class.
	+ Updated GLHelper.cs, with methods to obtain or reload OpenGL entry points, as well as query for supported extensions.
	+ Got rid of "object" overloads for typed arrays.
	+ All known bugs are now fixed.

+ OpenTK.OpenGL (High level)
	+ Added the DisplayList class.

+ OpenTK.Examples.OpenGL
	+ Added the Basic.DisplayLists example.



OpenTK 0.3.4 -> 0.3.5
+ Thanks to Erik Ylvisaker's hard work, OpenTK now works under both Windows and X11.
	+ The GLContext class now contains all needed code for mode switching.
	+ The Framework class structure has been updated. Less code is duplicated between GLContext and Framework now.
	+ Three new examples have been added: OpenGL.Basic.Lesson01 (equivalent to OpenGL.GLSL.Lesson01 without the shaders), OpenGL.Basic.QueryDisplayModes which shows a list of all available display modes, and OpenGL.Basic.NoFramework which shows how to use OpenGL Contexts directly (without relying on the framework).
	+ New bindings for X and the XF86 extension.
+ New build system based on Prebuild and NAnt (similar to the one used in Tao or Mono.XNA).
+ Updates to the OpenTK.OpenGL.DisplayMode and ColorDepth classes.
+ More XML documentation blocks added to functions and classes.